# vibe-trading

./: .env  .env.example  .geminiignore  .gitignore  .mcp.json  .npmrc  .nxignore  AGENTS.md  CLAUDE.md  CODING_GUIDELINES_ALL.md  Dockerfile  GEMINI.md  IMPLEMENTATION_COMPLETE.md  README.md  config.json  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  events.jsonl  full_diff.patch  index.html  llm-full.md  nx.json  package-lock.json  package.json  prd.md  test-brush-day-count.js  treemap-coldstart.html  treemap-test-runner.html  workflow-diagram.md
.claude/: mcp.json  (+1 more)
apps/market-data/: README.md  project.json  pyproject.toml
apps/market-data/src/: __init__.py  config.py  main.py
apps/market-data/src/cache/: __init__.py  redis_cache.py
apps/market-data/src/models/: __init__.py  ohlcv.py  shenwan.py
apps/market-data/src/routes/: __init__.py  ohlcv.py  qlib.py  shenwan.py
apps/market-data/src/services/: data_source_manager.py  qlib_dump.py
apps/market-data/src/services/providers/: __init__.py  akshare_provider.py  base_provider.py
apps/market-data/tests/: __init__.py  test_cache.py  test_data_source_manager.py  test_main.py  test_models.py  test_ohlcv_models.py  test_ohlcv_provider.py  test_ohlcv_routes.py  test_providers.py  test_qlib_dump.py  test_qlib_integration.py  test_routes.py
apps/vibe-editor/: .dockerignore  CLAUDE.md  Dockerfile  main.py  project.json  pyproject.toml  requirements.in
apps/vibe-editor/marimo/_cli/: upgrade.py
apps/vibe-editor/marimo/_cli/development/: commands.py
apps/vibe-editor/marimo/_config/: config.py  settings.py
apps/vibe-editor/marimo/_dependencies/: dependencies.py
apps/vibe-editor/marimo/_internal/: commands.py
apps/vibe-editor/marimo/_runtime/: commands.py  runtime.py
apps/vibe-editor/marimo/_runtime/runner/: hooks_on_finish.py  hooks_post_execution.py  hooks_pre_execution.py  hooks_preparation.py
apps/vibe-editor/marimo/_secrets/: env_provider.py  models.py  secrets.py
apps/vibe-editor/marimo/_server/: lsp.py  main.py  print.py  start.py
apps/vibe-editor/marimo/_server/api/: middleware.py  router.py
apps/vibe-editor/marimo/_server/models/: models.py  secrets.py
apps/vibe-editor/marimo/_utils/: health.py
apps/vibe-editor/rdagent/: FORK_NOTES.md  VENDORED_COMMIT  __init__.py
apps/vibe-editor/rdagent/log/: conf.py
apps/vibe-editor/rdagent/utils/: env.py
apps/vibe-editor/snippets/fundamental/: stock_financial_analysis_indicator.py
apps/vibe-editor/snippets/market/: stock_zh_a_hist.py  stock_zh_a_spot_em.py
apps/vibe-editor/tests/: test_file_routes.py  test_knowledge.py  test_library_routes.py  test_mining_integration.py  test_mining_manager.py  test_mining_models.py  test_mining_routes.py  test_mining_sse.py  test_mining_worker.py
apps/vibe-editor/vt_mining/: __init__.py  config.py  executor.py  knowledge.py  library_routes.py  manager.py  models.py  preflight.py  rdagent_loop.py  routes.py  worker.py
apps/vibe-editor/vt_sessions/: __init__.py  file_routes.py  manager.py  models.py  routes.py  snippet_routes.py  workspace.py
libs/shared-python/: README.md  project.json  pyproject.toml
libs/shared-python/tests/: __init__.py  test_kafka_utils.py
libs/shared-python/vibetrading/: __init__.py  kafka_utils.py  logger.py  redis_utils.py
(+1799 files in other folders)
