[tool.poetry]
name = "market-data"
version = "0.1.0"
description = "Vibe Trading - Market Data Service"
authors = ["Vincent Xu <vincent@vibe.trading>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
aiokafka = "^0.11.0"
redis = "^5.2.0"
pydantic-settings = "^2.6.0"
akshare = "~1.18.0"
pandas = "^2.2.0"
python-consul2 = "^0.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.8.0"
httpx = "^0.28.0"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
