[project]
name = "vibe-editor"
version = "0.1.0"
description = "Vibe Trading - Notebook Editor Service (based on marimo)"
requires-python = ">=3.10"

# Dependencies extracted from marimo 0.20.1 pyproject.toml
dependencies = [
    "click>=8.0,<9",
    "jedi>=0.18.0",
    "markdown>=3.6,<4",
    "pymdown-extensions>=10.15,<11",
    "pygments>=2.19,<3",
    "tomlkit>=0.12.0",
    "pyyaml>=6.0.1",
    "uvicorn>=0.22.0",
    "starlette>=0.37.2",
    "websockets>=14.2.0",
    "loro>=1.10.0",
    "docutils>=0.16.0",
    "psutil>=5.0",
    "itsdangerous>=2.0.0",
    "narwhals>=2.0.0",
    "packaging",
    "msgspec>=0.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
