[tool.poetry]
name = "vibetrading-shared"
version = "0.1.0"
description = "Shared Python utilities for Vibe Trading platform"
authors = ["Vincent Xu <vincent@vibe.trading>"]
readme = "README.md"
packages = [{include = "vibetrading"}]

[tool.poetry.dependencies]
python = "^3.11"
aiokafka = "^0.11.0"
redis = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
